fix: align text center in footer

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   font-size: var(--font-size-sm);
   color: var(--secondary-text-color);
   margin-top: auto;
